[package]
name = "ky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {verion = "1.16.1", features = ["net", "rt", "rt-multi-thread", "io-util", "parking_lot"]}
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
server = {path = "src/server"}

[[bin]]
name = "server"
path = "./bin/server.rs"

[profile.release]
debug = true