[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.1.0"
collections = {path = "../collections/"}
hashbrown = {version = "0.12.0", features = ["ahash", "inline-more", "rayon", "ahash-compile-time-rng"]}
rayon = "1.0"
parking_lot = "0.12.0"