[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.3.2"
collections = {path = "../collections/"}
hashbrown = {version = "0.12.0", features = ["ahash", "inline-more", "rayon", "ahash-compile-time-rng"]}
parking_lot = "0.12.0"