[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {verion = "1.16.1", features = ["net", "io-util", "rt", "sync", "time"]}
tracing = "0.1.29"
thiserror = "1.0.24"
database = {path = "../database/"}
parking_lot = "0.12.0"
